fixed z-index of dropdown menu

--- a/client/src/components/modules/navbar.module.css
+++ b/client/src/components/modules/navbar.module.css
@@ -42,7 +42,7 @@ li.dropdown {
     background-color: #f9f9f9;
     min-width: 125px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 2000;
 }
 
 .dropItem {
